Fix `vertical-align` for `#social img`

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ hr {
     padding-bottom: 0.2em;
 }
 #social img {
-    vertical-align: center;
+    vertical-align: text-top;
 }
 
 
